<resources>
    <string name="app_name">Caviar Apps</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="content_login_1">Dapatkan pengalaman untuk bernavigasi menuju lampu lalu lintas dengan mudah dan fitur penyeberangan yang membantu</string>
    <string name="tombol_login">Tombol Login</string>
    <string name="content_login_2">Silahkan masuk melalui tombol dibawah ini</string>
    <string name="sign_out">Sign Out</string>
    <string name="tombol_logout">tombol_logout</string>
    <string name="exit_hint">Apakah Anda yakin ingin keluar dari aplikasi?</string>
    <string name="content_description_camera">Tombol Deteksi Kamera</string>
    <string name="content_description_close_nav">Tutup navigasi</string>
    <string name="content_description_close_cam">Tutup kamera</string>
    <string name="content_description_traffic">Tombol Navigasi ke lalu lintas terdekat</string>
    <string name="sign_in">Login</string>
    <string name="content_message_redetect_zebracorss">Deteksi Ulang Zebra Cross</string>
</resources>