<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/bg_login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/selamat_datang"
        android:textColor="#020202"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="3"
        android:text="@string/content_login_1"
        android:textAlignment="center"
        android:textColor="#202020"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/content_login_2"
        android:textColor="#272626"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/tombol_login"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="8dp"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#5C5656"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>