<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_description_camera"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/tripProgressCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/soundButton"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_search_traffic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_description_traffic"
        android:focusable="true"
        android:src="@drawable/ic_traffic"
        app:layout_constraintBottom_toTopOf="@+id/tripProgressCard"
        app:layout_constraintStart_toStartOf="parent" />

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </com.mapbox.maps.MapView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tripProgressCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.mapbox.navigation.ui.tripprogress.view.MapboxTripProgressView
                android:id="@+id/tripProgressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/close_background"
                android:cropToPadding="true"
                android:contentDescription="@string/content_description_close_nav"
                android:padding="12dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.mapbox.navigation.ui.maneuver.view.MapboxManeuverView
        android:id="@+id/maneuverView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mapbox.navigation.ui.voice.view.MapboxSoundButton
        android:id="@+id/soundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeOverview" />

    <com.mapbox.navigation.ui.maps.camera.view.MapboxRouteOverviewButton
        android:id="@+id/routeOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recenter" />

    <com.mapbox.navigation.ui.maps.camera.view.MapboxRecenterButton
        android:id="@+id/recenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maneuverView"
        app:tint="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>